# PathTracing

./: .gitignore  .gitmodules  Build_Windows.bat  CMakeLists.txt  README.md  imgui.ini  premake5.lua
PathTracing/: imgui.ini  premake5.lua
PathTracing/lib/glad/: premake5.lua
PathTracing/lib/glad/include/glad/: glad.h
PathTracing/lib/glad/src/: glad.c
PathTracing/shaders/: PathTracerRender.frag  PathTracerRender.vert
PathTracing/src/: Application.cpp  Application.h
PathTracing/src/Core/: Application.cpp  Application.h  Base.h  Editor.cpp  Editor.h  Event.h  Main.cpp  SceneData.cpp  SceneData.h  SceneRenderingController.cpp  SceneRenderingController.h  Viewport.cpp  Viewport.h  Window.cpp  Window.h
PathTracing/src/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  GraphicCore.cpp  GraphicCore.h  ImGuiRenderer.cpp  ImGuiRenderer.h  Image.cpp  Image.h  Renderer.cpp  Renderer.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
PathTracing/src/Renderer/Image/: Image.cpp  Image.h
PathTracing/src/Renderer/PathTracing/: Camera.cpp  Camera.h  PathTracer.cpp  PathTracer.h  Ray.cpp  Ray.h
PathTracing/src/Renderer/PathTracing/Materials/: Lambertian.cpp  Lambertian.h  Light.cpp  Light.h  Material.cpp  Material.h  Mirror.cpp  Mirror.h
PathTracing/src/Renderer/PathTracing/Pdf/: CosinePdf.h  HittablePdf.h  MirrorPdf.h  MixturePdf.cpp  MixturePdf.h  OrthonormalBasis.h  Pdf.h  SpherePdf.h
PathTracing/src/Renderer/PathTracing/Primitives/: IntersectData.cpp  IntersectData.h  Plane.cpp  Plane.h  Primitive.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h
PathTracing/src/Renderer/PathTracing/Scene/: Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
PathTracing/src/Renderer/Primitives/: Box.cpp  Box.h  IntersectData.cpp  IntersectData.h  Plane.cpp  Plane.h  Primitive.cpp  Primitive.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h
PathTracing/src/Renderer/Scene/: Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
PathTracing/src/Utils/: RandomUtils.cpp  RandomUtils.h
helper/: imgui.ini
